Trying to fix backface-visibility support on ios

--- a/static/styles.css
+++ b/static/styles.css
@@ -568,6 +568,10 @@ label {
     position: absolute;
     width: 100%;
     height: 100%;
+    -webkit-perspective: 0;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translate3d(0,0,0);
+    visibility:visible;
     backface-visibility: hidden;
 }
 
